# CTest

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: score.h
src/: score.c
tests/: test_score.c
